# timo24-rs

./: Cargo.toml  config.json  time-config.json  user-config.json
src/: date.rs  main.rs  timo.rs
