[package]
name = "timo24-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
simplelog = "0.12"
uuid =  {version = "1.5.0", features = ["v4"]}
figment = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
regex = "1.10.2"
